--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <link rel="apple-touch-icon" sizes="192x192" href="%PUBLIC_URL%/logo192.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>My Idea Pool</title>
+    <title>The Idea Pool</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
